# SufPaint

./: .gitignore  CMakeLists.txt  EnumFunctions.cpp  EnumFunctions.h  Enums.h  README.md  cactionmanager.cpp  cactionmanager.h  cconnector.cpp  cconnector.h  cimagemanager.cpp  cimagemanager.h  cimageprocessor.cpp  cimageprocessor.h  ctoolmanager.cpp  ctoolmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Dialogues/: ccanvasresizedialog.cpp  ccanvasresizedialog.h  ccanvasresizedialog.ui  cimageresizedialog.cpp  cimageresizedialog.h  cimageresizedialog.ui  cnewimagedialog.cpp  cnewimagedialog.h  cnewimagedialog.ui
Management/: cactionmanager.cpp  cactionmanager.h  ccolormanager.cpp  ccolormanager.h  cimagemanager.cpp  cimagemanager.h  cimageviewmanager.cpp  cimageviewmanager.h  cselectionmanager.cpp  cselectionmanager.h  ctoolmanager.cpp  ctoolmanager.h
Menu/: cadjustmentmenu.cpp  cadjustmentmenu.h  ceditmenu.cpp  ceditmenu.h  cfilemenu.cpp  cfilemenu.h  chelpmenu.cpp  chelpmenu.h  cimagemenu.cpp  cimagemenu.h  cmenu.cpp  cmenu.h  cmenubase.cpp  cmenubase.h  ctoolbar.cpp  ctoolbar.h  cviewmenu.cpp  cviewmenu.h
Misc/: cbackgroundpattern.cpp  cbackgroundpattern.h  ccolorpatternimage.cpp  ccolorpatternimage.h  cimageviewtransform.cpp  cimageviewtransform.h  cpixelgrid.cpp  cpixelgrid.h  cscale.cpp  cscale.h  cselection.cpp  cselection.h  debugtools.cpp  debugtools.h
Statusbar/: cstatusbar.cpp  cstatusbar.h  cstatusbarimagelabel.cpp  cstatusbarimagelabel.h  cstatusbartoollabel.cpp  cstatusbartoollabel.h  cstatusbarzoomlabel.cpp  cstatusbarzoomlabel.h
Tools/: cbrushtool.cpp  cbrushtool.h  cbuckettool.cpp  cbuckettool.h  ccolorpickertool.cpp  ccolorpickertool.h  cellipseselectiontool.cpp  cellipseselectiontool.h  cgradienttool.cpp  cgradienttool.h  clinestool.cpp  clinestool.h  cpantool.cpp  cpantool.h  cpenciltool.cpp  cpenciltool.h  crectangleselectiontool.cpp  crectangleselectiontool.h  ctool.cpp  ctool.h
Widgets/: ccolorhistorywidget.cpp  ccolorhistorywidget.h  ccolorpalettewidget.cpp  ccolorpalettewidget.h  ccolorpreviewwidget.cpp  ccolorpreviewwidget.h  ccolorrgbawidget.cpp  ccolorrgbawidget.h  ccolorwidget.cpp  ccolorwidget.h  cimageview.cpp  cimageview.h  clayerwidget.cpp  clayerwidget.h  ctoolbutton.cpp  ctoolbutton.h  ctoolwidget.cpp  ctoolwidget.h
